fix: fix horizontal scroll

--- a/src/components/layout/Main/Main.module.scss
+++ b/src/components/layout/Main/Main.module.scss
@@ -3,6 +3,8 @@
 .container {
   padding-right: $spacing-5;
   padding-left: $spacing-5;
+
+  overflow: hidden;
 }
 
 .content {
